--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 {
-  "ring_name": "Webring",
-  "ring_description": "A webring to connect member sites.",
-  "ring_owner": "Webring Organization / Person",
-  "ring_owner_site": "https://domain.tld",
+  "ring_name": "roboring",
+  "ring_description": "a webring for robot-aligned beings",
+  "ring_owner": "stel",
+  "ring_owner_site": "https://moondvsted.neocities.org/",
   "filepath_list": "./websites.json",
-  "path_output": "./webring",
+  "path_output": "./public",
   "path_assets": "./data/assets",
   "path_templates": "./data/templates",
   "base_url": "https://webring.domain.tld",
