change public to docs

--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
   "ring_owner": "stel",
   "ring_owner_site": "https://moondvsted.neocities.org/",
   "filepath_list": "./websites.json",
-  "path_output": "./public",
+  "path_output": "./docs",
   "path_assets": "./data/assets",
   "path_templates": "./data/templates",
   "base_url": "https://webring.domain.tld",
